base path 'TextUtils' added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://prashant1677.github.io/textutils",
+  "homepage": "https://prashant1677.github.io/TextUtils",
   "name": "textutils",
   "version": "0.1.0",
   "private": true,
